# photon-3

./: Cargo.toml
.cargo/: config.toml
lib/: Cargo.toml
lib/src/: lib.rs  old_value.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  tests.rs
scripts/: build-runtime.sh
src/: llvm_test.rs  llvm_test_2.rs  main.rs  ref_registry.rs  vec_map.rs
src/ast/: ast.rs  inspect.rs  lexer.rs  lookahead_token_iterator.rs  mod.rs  parser.rs  pattern.rs
src/backend/: mod.rs
src/backend/interpreter/: interpreter.rs  value.rs
src/backend/llvm/: anon_id.rs  extern_fn.rs  function_builder.rs  llvm_jit_compiler.rs  mod.rs  (+2 more)
src/compiler/: compiler.rs  function_builder.rs  ir.rs  jit_compiler.rs  lexical_scope.rs  lir.rs  mir.rs  mir_module_compiler.rs  mod.rs  scope.rs
src/frontend/: ast.rs  inspect_ast.rs  lexer.rs  location.rs  lookahead_token_iterator.rs  mod.rs  parser.rs  pattern.rs
src/interpreter/: interpreter.rs  value.rs
src/ir/: builder.rs  compiler.rs  globals.rs  interpreter.rs  ir.rs  mod.rs  type.rs  value.rs
src/lib/: arena.rs
src/lir/: compile_time_state.rs  compiler.rs  globals.rs  interpreter.rs  lir.rs  mod.rs  old_interpreter.rs  value.rs
src/mir/: compiler.rs  mir.rs  mir_module_compiler.rs  mod.rs
src/old_lir/: compile_time_state.rs  compiler.rs  globals.rs  interpreter.rs  lir.rs  mod.rs  value.rs
src/parser/: lexer.rs  location.rs  mod.rs
src/tests/: compiler.rs  interpreter.rs  lexer.rs  llvm_compiler.rs  mod.rs  old_compiler.rs  old_llvm_compiler.rs  parser.rs  scope.rs  wasm.rs
src/types/: intrinsics.rs  mod.rs  type_registry.rs
(+37 files in other folders)
