[workspace]
members = ["runtime"]

[package]
name = "photon-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { path = "./runtime" }
wasmtime = "19.0.2"
binaryen-sys = "0.13.0"
#binaryen_capi-sys = "0.117.0"