[workspace]
members = ["lib", "runtime"]

[package]
name = "photon-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "./lib" }
wasmtime = "19.0.2"
binaryen-sys = "0.13.0"
llvm-sys = "181.0.0"
#binaryen_capi-sys = "0.117.0"

#[profile.test]
#opt-level = 2